<resources>
	<string	name="app_name"	translatable="false">Toefl Vocabulary</string>
	<string name="height">140dp</string>
	<string name="width">100dp</string>
    <string name="re_password">Re-Password</string>
    <string name="sign_up">Sign up</string>
    <string name="register">REGISTER</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="break_if_wrong">Break if wrong:</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="dialog_text">You have X points</string>
    <string name="ok">OK</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="set_timer">set timer (on process)</string>
    <string name="aforizm">Success does not come to you, YOU GO TO IT! \n Marva Collins</string>
    <string name="testes">Tests</string>
    <string name="start_learning">Start Learning</string>
    <string name="improve_listening">Improve Listening</string>
    <string name="description">Description:\ </string>
    <string name="example">Usage in sentence:</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="listening_text">In this list, all movies will help you understand the TOEFL texts, and you can find a good film with subtitles that can help you improve your listening skills.</string>
    <string name="movies">Movies</string>
</resources>
