<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/linear1"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/backgroundColor"
	android:orientation="vertical"
	android:paddingTop="30dp"
	android:paddingBottom="30dp">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/aforizm"
		android:textSize="40dp"
		android:id="@+id/animtext"
		android:textColor="#FFFFFF"
		android:layout_marginTop="50dp"
		android:layout_marginLeft="30dp"
		android:layout_marginRight="30dp"
		android:layout_marginBottom="100dp"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:gravity="center">

		<Button
			android:id="@+id/startBtn"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="300dp"
			android:layout_height="40dp"
			android:background="@drawable/background"
			android:padding="8dp"
			android:text="Start Testing"
			android:textColor="#000000"
			android:textSize="20sp"
			android:textStyle="bold"
			android:layout_marginBottom="20dp"/>

		<Button
			android:id="@+id/exitBtn"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="300dp"
			android:layout_height="40dp"
			android:background="@drawable/background"
			android:padding="8dp"
			android:text="@string/start_learning"
			android:textColor="#000000"
			android:textSize="20sp"
			android:textStyle="bold"
			android:gravity="center"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="20dp"/>

		<Button
			android:id="@+id/listeningBtn"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="300dp"
			android:layout_height="40dp"
			android:background="@drawable/background"
			android:padding="8dp"
			android:text="@string/improve_listening"
			android:textColor="#000000"
			android:textSize="20sp"
			android:textStyle="bold"
			android:gravity="center"
			android:layout_marginTop="20dp"/>
	</LinearLayout>


</LinearLayout>


